build.gradle: updated runIde