@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'com.glasside'
-version '1.1.2-SNAPSHOT'
+version '1.1.3-SNAPSHOT'
 def isDebugMode = false // If false it will use the debug version of the renderer
 
 repositories {
@@ -38,6 +38,11 @@ patchPluginXml {
     sinceBuild = '202'
     untilBuild = '203.*'
 }
+
+runIde {
+    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
+}
+
 
 def cppOutputDir = isDebugMode ? "Debug" : "Release"
 
